added the header. revamped ui for the message card and board

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(41, 39, 39, 0.87);
-  background-color: #ede0e9;
+  background-color: #FDFEFE;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
