--- a/src/MessageBoard.css
+++ b/src/MessageBoard.css
@@ -1,16 +1,19 @@
 .message-board-container {
     width: 100%;
     display: flex;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
     justify-content: center;
-    padding: 2rem;
 }
 
 .message-board-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 2rem;
     width: 100%;
     max-width: 100vw;
+    padding: 0;
+    margin: 0;
 }
 
 @media (max-width: 768px) {
