--- a/src/MessageCard.css
+++ b/src/MessageCard.css
@@ -5,22 +5,24 @@
     height: 50vh;
     margin: 0;
     cursor: pointer;
-    color: #975188;
-    background-color: #6d6498;
+    color: #000000;
+    border: none;
     perspective: 1000px;
     display: flex;
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+    background-color: inherit;
+    padding: 1rem;
 }
 
 .card-inner {
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     position: relative;
     transition: transform 0.6s ease;
     transform-style: preserve-3d;
-    background-color: #dddaea;
+    /* Remove background-color from here */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,6 +34,7 @@
 
 .card-front, .card-back {
     position: absolute;
+    width: 100%;
     height: 100%;
     backface-visibility: hidden;
     flex-direction: column;
@@ -41,7 +44,6 @@
     border-radius: 10px;
     display: flex;
     box-sizing: border-box;
-    
 }
 
 .card-back {
@@ -51,13 +53,11 @@
 .message-author {
     font-family: "Barriecito", system-ui;
     font-size: 1rem;
-
 }
 
 .text-message {
     font-family: 'Sour Gummy', sans-serif;
     font-size: 1rem;
-
 }
 
 .message-image {
